added changes after review
