# auth-service/main.go
@@ -13,6 +13,7 @@ import (
 	userservice "auth-service/internal/service"
 	"strings"
 	"task-manager/pb"
+
 	"github.com/joho/godotenv"
 	_ "github.com/lib/pq"
 	"google.golang.org/grpc"
@@ -52,32 +53,47 @@ func main() {
 	http.Handle("/swagger/", http.StripPrefix("/swagger/", http.FileServer(http.Dir("./docs"))))
 	http.Handle("/swagger-ui/", http.StripPrefix("/swagger-ui/", http.FileServer(http.Dir("./swagger-ui"))))
 	http.HandleFunc("/login", authHandler.Login)
+	http.HandleFunc("/signup", authHandler.Signup)
 
 	http.HandleFunc("/users/", func(w http.ResponseWriter, r *http.Request) {
 		switch r.Method {
 		case http.MethodGet:
-			pathParts := strings.Split(strings.Trim(r.URL.Path, "/"), "/")
+			middleware.AuthMiddleware(
+				middleware.RoleMiddleware()(
+					func(w http.ResponseWriter, r *http.Request) {
+						pathParts := strings.Split(strings.Trim(r.URL.Path, "/"), "/")
 
-			if len(pathParts) == 1 {
-				userHandler.GetAll(w, r, service)
+						if len(pathParts) == 1 {
+							userHandler.GetAll(w, r, service)
 
-			} else if len(pathParts) == 2 {
-				userHandler.GetById(w, r, service)
-			} else {
-				http.Error(w, "Invalid URL", http.StatusBadRequest)
-			}
+						} else if len(pathParts) == 2 {
+							userHandler.GetById(w, r, service)
+						} else {
+							http.Error(w, "Invalid URL", http.StatusBadRequest)
+						}
+					}),
+			)(w, r)
 		case http.MethodPost:
-			middleware.AuthMiddleware(func(w http.ResponseWriter, r *http.Request) {
-				userHandler.Insert(w, r, service)
-			})(w, r)
+			middleware.AuthMiddleware(
+				middleware.RoleMiddleware()(
+					func(w http.ResponseWriter, r *http.Request) {
+						userHandler.Insert(w, r, service)
+					}),
+			)(w, r)
 		case http.MethodPut:
-			middleware.AuthMiddleware(func(w http.ResponseWriter, r *http.Request) {
-				userHandler.Update(w, r, service)
-			})(w, r)
+			middleware.AuthMiddleware(
+				middleware.RoleMiddleware()(
+					func(w http.ResponseWriter, r *http.Request) {
+						userHandler.Update(w, r, service)
+					}),
+			)(w, r)
 		case http.MethodDelete:
-			middleware.AuthMiddleware(func(w http.ResponseWriter, r *http.Request) {
-				userHandler.Delete(w, r, service)
-			})(w, r)
+			middleware.AuthMiddleware(
+				middleware.RoleMiddleware()(
+					func(w http.ResponseWriter, r *http.Request) {
+						userHandler.Insert(w, r, service)
+					}),
+			)(w, r)
 		default:
 			http.Error(w, "Method Not Allowed", http.StatusMethodNotAllowed)
 		}
@@ -118,7 +134,7 @@ func main() {
 
 func connectPostgres() *sql.DB {
 
-	db, err := sql.Open("postgres", "postgres://postgres:postgres@localhost:5432/userdb?sslmode=disable")
+	db, err := sql.Open("postgres", "postgres://postgres:postgres@localhost:5434/userdb?sslmode=disable")
 	if err != nil {
 		log.Fatalf("Error opening database: %v", err)
 	}
